# cowork-agent-runtime

./: .env.anthropic.example  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-loop-architecture.md  integration-gaps.md
scripts/: create-tasks-table.py  test-chat.py  test-jsonrpc.py
src/agent_host/: __init__.py  config.py  exceptions.py  logging.py  main.py  models.py
src/agent_host/agent/: agent_factory.py  artifact_store.py  callbacks.py  context_truncation.py  file_change_tracker.py  tool_adapter.py
src/agent_host/approval/: approval_client.py  approval_gate.py
src/agent_host/budget/: token_budget.py
src/agent_host/events/: event_emitter.py
src/agent_host/llm/: client.py  error_classifier.py  models.py
src/agent_host/loop/: __init__.py  agent_loop.py  agent_tools.py  error_recovery.py  loop_runtime.py  models.py  react_loop.py  strategy.py  sub_agent.py  system_prompt.py  tool_executor.py  verification.py
src/agent_host/memory/: memory_manager.py  persistent_memory.py  plan.py  project_instructions.py  task_tracker.py  working_memory.py
src/agent_host/policy/: __init__.py  command_matcher.py  domain_matcher.py  path_matcher.py  policy_enforcer.py  risk_assessor.py
src/agent_host/server/: handlers.py  json_rpc.py  method_dispatcher.py  stdio_transport.py
src/agent_host/session/: checkpoint_manager.py  checkpoint_session_service.py  session_client.py  session_manager.py  workspace_client.py
src/tool_runtime/: __init__.py  exceptions.py  models.py  validation.py
tests/: conftest.py
tests/fixtures/: mock_llm.py  policy_bundles.py
tests/integration/: test_code_execution.py  test_policy_tool_integration.py
tests/unit/: test_create_directory.py  test_delete_file.py  test_edit_file.py  test_execute_code_tool.py  test_fetch_url.py  test_find_files.py  test_grep_files.py  test_http_request.py  test_list_directory.py  test_move_file.py  test_multi_edit.py  test_output.py  test_preamble.py  test_python_executor.py  test_read_file.py  test_router.py  test_run_command.py  test_validation.py  test_view_image.py  test_web_search.py  test_write_file.py
(+86 files in other folders)
